--- a/SDG.SpookyWisconsin.WebUI/Views/Member/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Member/Index.cshtml
@@ -10,6 +10,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Tier)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.NewsLetterOpt)
             </th>
             <th>
@@ -21,6 +24,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tier)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NewsLetterOpt)
             </td>
