--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Index.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <div class="card-body">
                     <div class="card-img">
-                        <img src="/images/locations/@item.ImagePath"
+                        <img src="/images/@item.ImagePath"
                              class="card-img"
                              onclick="on('/images/locations/@item.ImagePath')"
                              alt="@item.Name" />
