Changed Haunted Events Page and added headers to some he, news, and tours.

--- a/SDG.SpookyWisconsin.WebUI/Views/NewsLetter/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/NewsLetter/Index.cshtml
@@ -5,7 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
+<h2 class="ms-2">
+    Newsletter
+</h2>
 <table class="table">
     <thead>
         <tr>
