--- a/SDG.SpookyWisconsin.WebUI/Views/Tour/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Tour/Index.cshtml
@@ -6,9 +6,9 @@
 }
 
 
-<p class="ms-2">
-    <a asp-action="Create">Create New</a>
-</p>
+<h2 class="ms-2">
+    Haunted Tours
+</h2>
 <table class="table">
     <thead>
         <tr>
