--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Index.cshtml
@@ -6,33 +6,37 @@
 }
 
 
-<p class="ms-2">
-    <a asp-action="Create">Create New</a>
-</p>
-<div class="row">
-    @foreach (var item in Model)
-    {
-        <div class="col-sm-4">
-            <div class="card mb-2">
-                <div class="card-header header">
-                    <h3>@Html.DisplayFor(modelItem => item.Name)</h3>
-                </div>
-                <div class="card-body">
-                    <div class="card-img">
-                        <img src="/images/@item.ImagePath"
-                             class="card-img"
-                             onclick="on('/images/locations/@item.ImagePath')"
-                             alt="@item.Name" />
-                    </div>
-                    <h5>@Html.DisplayFor(modelItem => item.Date)</h5>
-                    <h5>@Html.DisplayFor(modelItem => item.Description)</h5>
-                </div>
-                <div class="card-footer">
-                    <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Edit">Edit</a>
-                    <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Details">Details</a>
-                    <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Delete">Delete</a>
-                </div>
-            </div>
-        </div>
-    }
-</div>
+<h2 class="ms-2">
+    Haunted Events
+</h2>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                    @Html.ActionLink("Details", "Details", new {  id=item.Id}) |
+                    @Html.ActionLink("Delete", "Delete", new {  id=item.Id })
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
