resized images (might need to revert this)

--- a/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="card-header header">
                     <h3>@item.MerchName</h3>
                 </div>
-                <div class="card-img">
+                <div>
                     <img src="/images/merch/@item.ImagePath"/>
                 </div>
 
